--- a/fractals.ipynb
+++ b/fractals.ipynb
@@ -6,7 +6,7 @@
       "name": "fractals.ipynb",
       "provenance": [],
       "mount_file_id": "1rE5oZDRUpyb6Yo_ysqHZelHilY7mENuU",
-      "authorship_tag": "ABX9TyNlNHKDI4OQHuWh7Cymf+l1",
+      "authorship_tag": "ABX9TyPVIh8x7FZ7NO+aUgSlsqwB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -165,12 +165,7 @@
       "cell_type": "code",
       "source": [
         "plt.scatter(*zip(*points))\n",
-        "plt.show()\n",
-        "\n",
-        "#saving plot\n",
-        "# path = \"/content/drive/MyDrive/Colab Notebooks/fractals.png\"\n",
-        "# plt.savefig(path, dpi=1200)\n",
-        "# files.download(path) "
+        "plt.show()"
       ],
       "metadata": {
         "colab": {
@@ -193,30 +188,6 @@
           "metadata": {
             "needs_background": "light"
           }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive, files\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HG00n51hbQF6",
-        "outputId": "10e2357c-1510-42e6-8963-d79553cc73ef"
-      },
-      "execution_count": 151,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
         }
       ]
     }
